# coding-challenges

./: .gitignore  README.md
coding-challenge-1/: .gitignore  .prettierignore  README.md  coding-challenge-1-improvements.md  coding-challenge-1-result.md  coding-challenge-1.md  eslint.config.js  jest.config.js  package-lock.json  package.json  pyproject.toml
coding-challenge-1/BSOD/: coding-challenge-1.md  jest.config.cjs  package-lock.json  package.json  solution.md
coding-challenge-1/BSOD/src/: TeamRotator.test.ts  TeamRotator.ts
coding-challenge-1/NHA/: README.md  TODO
coding-challenge-1/NoSleep/TeamRotator/: TeamRotator.csproj
coding-challenge-1/TeamRotator/: Member.cs  TeamRotator.cs  TeamRotator.csproj  TeamRotator.sln
coding-challenge-1/TeamRotator/TeamRotator.Tests/: TeamRotator.Tests.csproj  UnitTest1.cs
coding-challenge-1/apps/examples/: example1-basic-rotation.ts  example2-no-repetition.ts  example3-skip-inactive.ts  example4-next-n-members.ts  example5-single-active.ts  example6-all-inactive.ts  package.json  project.json
coding-challenge-1/samples/: samples.ipynb
coding-challenge-1/src/: TeamRotator.test.ts  TeamRotator.ts  cli.ts  index.ts
coding-challenge-1/src/interfaces/: RotationIterator.ts
coding-challenge-1/src/member_management/: member.py  member_manager.py  status.py
coding-challenge-1/src/models/: member.test.ts  (+3 more)
coding-challenge-1/tests/: fixtures.py  test_change_status.py  test_get_member.py  test_member_manager.py
coding-challenge-1/thiennguyen/: .gitignore  .prettierignore  .yarnrc  README.md  nx.json  tsconfig.json
(+631 files in other folders)
